# consultant-invoicing

./: .gitignore  README.md  manage.bat  manage.sh  pyproject.toml
app/: database.py  log_config.py  main.py  seed_demo.py  style.css  template_utils.py
app/templates/: invoice_default.html
docs/: decisiones.md  funcionalidades.md  investigacion_ia.md  plan_accion.md  rust_vs_python.md  tech_stack.md  user_stories.md
docs/plans/: 2026-03-05-expenses-and-reports-redesign.md  2026-03-05-expenses-reports-implementation.md
tests/: test_expense_model.py
